Refactor code, update Java to 17, use lambdas